syntax = "proto3";

option go_package = ".;protos";
option java_multiple_files = true;
option java_package = "esfs.dataserver";
option java_outer_classname = "DataserverProto";

service Authentication {
  rpc login(LoginRequest) returns (LoginResponse) {}
  rpc register(RegisterRequest) returns (RegisterResponse) {}
}

enum ErrorMessage {
  OK = 0;
  PASSWORD_WRONG = 1;
  USER_NOT_EXISTS = 2;
  USER_ALREADY_EXISTS = 3;
  SERVER_ERROR = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool ok = 1;  //登录是否成功
  ErrorMessage errorMessage = 2;
}

//TODO:还没有加入检查证书的功能
message RegisterRequest {
  string username = 1;
  string password = 2;
  string defaultSecondKey = 3;
}

message RegisterResponse {
  bool ok = 1;
  ErrorMessage errorMessage = 2;
}

service FileHandle {
  rpc listFiles(ListFilesRequest) returns (ListFilesResponse) {}
  rpc uploadPrepare(UploadPrepareRequest) returns (UploadPrepareResponse) {}
}

message ListFilesRequest {
  string username = 1;
}

message ListFilesResponse {
  bool ok = 1;
  repeated string fileInfo = 2;
}

message UploadPrepareRequest {
  string username = 1;
  bytes fileInfo = 2;
}

message UploadPrepareResponse {
  bool ok = 1;
  ErrorMessage errorMessage = 2;
}